Alignment fix for mobile nav

--- a/public/css/style-zombie.css
+++ b/public/css/style-zombie.css
@@ -462,6 +462,14 @@ button {
 	max-width : none;
 }
 
+.js-ready #nav {
+  padding-top : 0;
+}
+
+#nav .block {
+  margin-top : 75px;
+}
+
 /*---------------------------------------------------------------------------------------*/
 /*  Table Styles                                                                                 
 /*---------------------------------------------------------------------------------------*/
